ghc-4335c07/testsuite/tests/indexed-types/should_fail/T13102/orphan/F.hs
{-# LANGUAGE TypeFamilies #-}

module F where

type family F a :: *
